objects/pse__Timecard_Transmission__c.object
<CustomObject>
    <customHelpPage>pse__TimecardTransmissionHelp</customHelpPage>
    <description>Stores the results of each timecard transmission between a third-party application and PSA.</description>
    <fields>
        <fullName>pse__Batch_Limit__c</fullName>
        <description>Maximum number of resources we can send timecards for in a single response.</description>
        <inlineHelpText>Maximum number of resources we can send timecards for in a single response.</inlineHelpText>
        <label>Batch Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__EndDate__c</fullName>
        <description>The end date contained in the POST request.</description>
        <inlineHelpText>The end date contained in the POST request.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Message__c</fullName>
        <description>Message returned when an error occurs.</description>
        <inlineHelpText>Message returned when an error occurs.</inlineHelpText>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Records_Processed__c</fullName>
        <description>Number of resource transmissions processed with a status of Complete.</description>
        <inlineHelpText>Number of resource transmissions processed with a status of Complete.</inlineHelpText>
        <label>Records Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__StartDate__c</fullName>
        <description>The start date contained in the POST request.</description>
        <inlineHelpText>The start date contained in the POST request.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>Status of the timecard transmission.</description>
        <inlineHelpText>Status of the timecard transmission.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Timecard Transmission</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TT-{00000}</displayFormat>
        <label>Timecard Transmission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timecard Transmissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>